--- a/templates/bundles/ApiPlatformBundle/SwaggerUi/index.html.twig
+++ b/templates/bundles/ApiPlatformBundle/SwaggerUi/index.html.twig
@@ -1,9 +1,7 @@
 {% extends '@bolt/_base/layout.html.twig' %}
 
-{% block container "is-wide" %}
-
 {% block title %}
-    <i class='fas fa-code'></i> <strong>Bolt API</strong>
+    <i class='fas fa-code'></i> Bolt API
 {% endblock %}
 
 {% block main %}
