--- a/templates/bundles/TranslationBundle/WebUI/base.html.twig
+++ b/templates/bundles/TranslationBundle/WebUI/base.html.twig
@@ -1,7 +1,8 @@
 {% extends '@bolt/_base/layout.html.twig' %}
+{% import '@bolt/_macro/_macro.html.twig' as macro %}
 
 {% block title %}
-    Edit Translations
+    {{ macro.icon('language') }} Edit Translations
 {% endblock %}
 
 {% block main %}
