--- a/templates/users/profile.html.twig
+++ b/templates/users/profile.html.twig
@@ -1,11 +1,14 @@
 {% extends '@bolt/_base/layout.html.twig' %}
 {% import '@bolt/_macro/_macro.html.twig' as macro %}
 
+{# The 'title' and 'shoulder' blocks are the main heading of the page. #}
+{% block shoulder %}
+    {{ 'title.edit_user_profile'|trans }}
+{% endblock shoulder %}
+
 {% block title %}
-    <span class="admin__header--title__prefix">
-        {{ 'title.edit_user'|trans }}
-    </span>
-    {{ macro.icon('user') }} {{ display_name|default(__('user.unknown_user')) }}
+    {{ macro.icon('user') }}
+    {{ display_name|default(__('user.unknown_user')) }}
 {% endblock %}
 
 {% block vue_id 'editor' %}
