--- a/templates/finder/_uploader.html.twig
+++ b/templates/finder/_uploader.html.twig
@@ -1,10 +1,12 @@
+{% import '@bolt/_macro/_macro.html.twig' as macro %}
+
 <div class="card mb-4">
     <div class="card-header">{{ 'caption.file_uploader'|trans }}</div>
 
     <form class="dropzone editor__image--dropzone"
           action="{{ path('bolt_async_upload', {'location': location, 'path': path}) }}"
           method="POST">
-        <i class="fas fa-upload"></i>
+        {{ macro.icon('upload') }}
         <input type="hidden" name="_csrf_token" value="{{ csrf_token('upload') }}">
         <div class="fallback">
             <input name="file" type="file" multiple />
