--- a/templates/finder/finder.html.twig
+++ b/templates/finder/finder.html.twig
@@ -1,7 +1,14 @@
 {% extends '@bolt/_base/layout.html.twig' %}
+{% import '@bolt/_macro/_macro.html.twig' as macro %}
+
+{# The 'title' and 'shoulder' blocks are the main heading of the page. #}
+{% block shoulder %}
+    {{ 'caption.file_management'|trans }}
+{% endblock shoulder %}
 
 {% block title %}
-    {{ 'caption.finder'|trans }} » <strong>{{ name }}</strong>
+    {{ macro.icon(location.icon) }}
+    {{ location.name }}: <code>{{ location.key }}{{ path }}</code>
 {% endblock %}
 
 {% block main %}
@@ -23,17 +30,17 @@
 <div class="card mb-4">
     <div class="card-header">{{ 'caption.meta_information'|trans }}</div>
     <div class="card-body">
-        <p class="path">{{ 'caption.path'|trans }}: <code>{{ location }}{{ path }}</code></p>
+        <p class="path">{{ 'caption.path'|trans }}: <code>{{ location.key }}{{ path }}</code></p>
 
         {{ 'finder.label_view'|trans }}
         <div class="btn-group">
             <a class="btn btn-secondary"
-               href="{{ path('bolt_filemanager', {'location': location, 'path': path, 'view': 'list' }) }}">
-                <i class="fas fa-list fa-fw"></i>{{ 'finder.button_list'|trans }}
+               href="{{ path('bolt_filemanager', {'location': location.key, 'path': path, 'view': 'list' }) }}">
+                {{ macro.icon('list') }}{{ 'finder.button_list'|trans }}
             </a>
             <a class="btn btn-secondary ml-1"
-               href="{{ path('bolt_filemanager', {'location': location, 'path': path, 'view': 'cards' }) }}">
-                <i class="fas fa-th fa-fw"></i>{{ 'finder.button_cards'|trans }}
+               href="{{ path('bolt_filemanager', {'location': location.key, 'path': path, 'view': 'cards' }) }}">
+                {{ macro.icon('th') }}{{ 'finder.button_cards'|trans }}
             </a>
         </div>
     </div>
