Tweaking margins for fullscreen editors

--- a/assets/scss/modules/editor/fields/_html.scss
+++ b/assets/scss/modules/editor/fields/_html.scss
@@ -10,7 +10,7 @@
 
 .trumbowyg-fullscreen {
   position: fixed;
-  top: $admin-toolbar-height;
+  top: $admin-toolbar-height-wide  + 1px;
   left: $admin-sidebar-width;
   margin: 0;
   padding: 0;
