--- a/assets/scss/modules/base/_status.scss
+++ b/assets/scss/modules/base/_status.scss
@@ -25,7 +25,7 @@
 }
 
 .badge {
-  color: #FFF !important;
+  color: #fff !important;
 
   &.is-published {
     background: var(--status-published);
