--- a/assets/scss/layout/_admin.scss
+++ b/assets/scss/layout/_admin.scss
@@ -4,9 +4,11 @@
 .admin {
   margin-top: $admin-toolbar-height;
   min-height: inherit;
+
   @include media-breakpoint-up(md) {
     margin-top: $admin-toolbar-height-wide;
   }
+
   &__toolbar {
     -webkit-backface-visibility: hidden;
     position: fixed;
@@ -15,6 +17,7 @@
     height: $admin-toolbar-height;
     width: 100vw;
     z-index: 5;
+
     @include media-breakpoint-up(sm) {
       height: $admin-toolbar-height-wide;
     }
@@ -22,9 +25,11 @@
 
   &__header {
     padding: 0;
+
     @include media-breakpoint-up(lg) {
       margin-left: $admin-sidebar-width;
     }
+
     @include media-breakpoint-up(wd) {
       margin-left: $admin-sidebar-width-wide;
       max-width: 100rem;
@@ -39,7 +44,8 @@
     transition: all 200ms;
     width: auto;
     min-width: 224px;
-    box-shadow: 5px 0px 15px rgba(40, 40, 40, 0.2);
+    box-shadow: 5px 0 15px rgba(40, 40, 40, 0.2);
+
     @include media-breakpoint-up(md) {
       top: $admin-toolbar-height-wide;
     }
@@ -48,11 +54,13 @@
       left: 0;
       width: $admin-sidebar-width;
       min-width: auto;
-      box-shadow: 0 0 0 rgba(255,255,255,100%);
+      box-shadow: 0 0 0 rgba(255, 255, 255, 100%);
     }
+
     @include media-breakpoint-up(wd) {
       width: $admin-sidebar-width-wide;
     }
+
     &--is-collapsed {
       left: -100%;
       // the sidebar comes into view on larger screens, even on initially on smaller screens collapsed sidebar
@@ -60,6 +68,7 @@
         left: 0;
       }
     }
+
     &--is-expanded {
       left: 0;
     }
@@ -69,9 +78,11 @@
     padding-top: 0;
     position: relative;
     z-index: 1;
+
     @include media-breakpoint-up(lg) {
       margin-left: $admin-sidebar-width;
     }
+
     @include media-breakpoint-up(wd) {
       margin-left: $admin-sidebar-width-wide;
       max-width: 100rem;
@@ -79,12 +90,15 @@
 
     &--container {
       padding: $spacer * 0.625;
+
       @include media-breakpoint-up(sm) {
         padding: $spacer * 1;
       }
+
       @include media-breakpoint-up(md) {
         padding: $spacer * 1.25;
       }
+
       @include media-breakpoint-up(xl) {
         display: grid;
         //grid with autofit to make columns expand full width if other column(s) not present
@@ -92,28 +106,33 @@
         grid-template-rows: auto;
         grid-column-gap: 1.5rem;
       }
+
       @include media-breakpoint-up(wd) {
         grid-column-gap: 3.5rem;
         padding: $spacer $spacer*2 $spacer $spacer*3.5;
       }
+
       &--has-sidebar {
         // grid-template-columns: 3fr 1fr;
         .admin__body--main {
           @include media-breakpoint-up(xl) {
-          grid-column: 1/9;
+            grid-column: 1/9;
           }
         }
       }
+
       > * {
         grid-column: 1/-1;
       }
     }
+
     &--main {
       @include media-breakpoint-up(xl) {
         grid-column: 1/13;
         width: 100%;
       }
     }
+
     &--aside {
       @include media-breakpoint-up(xl) {
         grid-column: 9/13;
@@ -123,8 +142,11 @@
   }
 }
 
-
-.fa, .fas, .far, .fal, .fab {
+.fa,
+.fas,
+.far,
+.fal,
+.fab {
   margin-right: 0.25em;
 }
 
