--- a/assets/scss/modules/admin/_header.scss
+++ b/assets/scss/modules/admin/_header.scss
@@ -7,6 +7,7 @@
     top: $admin-toolbar-height;
     z-index: 2;
   }
+
   @include media-breakpoint-up(md) {
     top: $admin-toolbar-height-wide;
   }
@@ -15,6 +16,7 @@
     position: static;
     top: 0;
   }
+
   &--title {
     font-weight: $font-weight-semibold;
     font-size: 1.825rem;
@@ -24,24 +26,29 @@
     position: relative;
     // max width set for menu button breathing room
     max-width: 80%;
+
     @include media-breakpoint-up(sm) {
       margin-top: 0.7rem;
       // max width set for menu button breathing room
       max-width: 85%;
     }
+
     @include media-breakpoint-up(md) {
       // max width set for menu button breathing room
       max-width: 88%;
     }
+
     @include media-breakpoint-up(lg) {
       max-width: none;
     }
+
     i {
       color: var(--boltblue);
       font-size: 1.5rem;
       top: -3px;
       position: relative;
     }
+
     &__prefix {
       font-weight: $font-weight-normal;
       font-size: 1.1rem;
@@ -57,16 +64,20 @@
     height: 100%;
     padding: $spacer $spacer*0.625 0;
     position: relative;
+
     @include media-breakpoint-up(sm) {
       padding: $spacer*1 $spacer*1 0;
     }
+
     @include media-breakpoint-up(md) {
       padding: $spacer*1.25 $spacer*1.25 0;
     }
+
     @include media-breakpoint-up(wd) {
       padding: $spacer*1.25 $spacer*2 1rem $spacer*3.5;
     }
   }
+
   &--togglebar {
     padding: $spacer;
     position: relative;
@@ -83,16 +94,22 @@
   padding: $spacer*0.4 $spacer*1.1;
   color: $white;
   background-color: var(--primary);
+
   @include media-breakpoint-up(sm) {
     right: $spacer * 1;
   }
+
   @include media-breakpoint-up(md) {
     right: $spacer * 1.25;
   }
+
   @include media-breakpoint-up(lg) {
     display: none;
   }
-  &:hover, &:active, &:focus {
+
+  &:hover,
+  &:active,
+  &:focus {
     background-color: var(--background);
   }
 }
