--- a/assets/scss/modules/listing/row/row.scss
+++ b/assets/scss/modules/listing/row/row.scss
@@ -21,14 +21,14 @@ $checkbox-row-width: 32px;
   }
 
   &.is-small {
-
     .listing__row--item-title-excerpt {
       display: none;
+
       @include media-breakpoint-up(md) {
         display: none;
       }
     }
-    
+
     &.is-actions {
       .btn-group {
         height: 1.8rem;
@@ -39,16 +39,18 @@ $checkbox-row-width: 32px;
         margin: 0 0 0 0.4rem;
       }
     }
-    
+
     .listing__row--item {
       &.is-details {
         display: flex;
         align-items: center;
       }
+
       &.is-meta {
         display: flex;
-        align-items: center; 
+        align-items: center;
       }
+
       &.is-actions {
         display: flex;
         align-items: center;
@@ -58,7 +60,6 @@ $checkbox-row-width: 32px;
         display: none;
       }
     }
-    
   }
 
   &--item {
@@ -66,9 +67,9 @@ $checkbox-row-width: 32px;
     padding: 0;
     margin: 0 0 $spacer/4;
 
-
     &.is-thumbnail {
       display: none;
+
       @include media-breakpoint-up(sm) {
         position: relative;
         top: 0.25rem;
@@ -81,16 +82,19 @@ $checkbox-row-width: 32px;
         background-repeat: no-repeat;
         background-size: cover;
       }
+
       @include media-breakpoint-up(md) {
         order: 1;
         top: 0;
         margin-bottom: 0;
         max-height: none;
       }
+
       & ~ .is-excerpt {
         @include media-breakpoint-up(sm) {
           padding-left: 0.5rem;
         }
+
         @include media-breakpoint-up(md) {
           padding-left: 0;
         }
@@ -99,14 +103,13 @@ $checkbox-row-width: 32px;
 
     &.is-details {
       flex: 0 0 100%;
-
       flex-grow: 2;
       overflow: hidden;
       text-overflow: ellipsis;
       display: -webkit-box;
       -webkit-box-orient: vertical;
       -webkit-line-clamp: 3;
-      
+
       //line-height: 1.3rem;
       max-height: 4.75rem;
 
@@ -128,31 +131,37 @@ $checkbox-row-width: 32px;
 
     .listing__row--item-title-excerpt {
       display: none;
+
       @include media-breakpoint-up(md) {
         display: inline;
       }
     }
-    
 
     &.is-excerpt {
       display: none;
+
       @include media-breakpoint-up(xs) {
         display: inline;
       }
+
       @include media-breakpoint-up(sm) {
         flex: 1 1 80%;
         max-height: 70px;
         overflow: hidden;
       }
+
       @include media-breakpoint-up(md) {
         order: 2;
         flex: 1 1 auto;
       }
+
       @include media-breakpoint-up(md) {
         padding-left: 0;
         display: none;
       }
-      p, span {
+
+      p,
+      span {
         @include media-breakpoint-up(sm) {
           display: -webkit-box;
           -webkit-box-orient: vertical;
@@ -168,13 +177,16 @@ $checkbox-row-width: 32px;
       display: flex;
       flex-wrap: wrap;
       padding-top: 0;
-      margin-bottom:0;
+      margin-bottom: 0;
+
       @include media-breakpoint-up(xs) {
         flex: 1 0 80%;
       }
+
       @include media-breakpoint-up(sm) {
         flex: 1 0 100%;
       }
+
       @include media-breakpoint-up(md) {
         flex: 0 0 130px;
         max-width: 130px;
@@ -191,11 +203,12 @@ $checkbox-row-width: 32px;
       justify-content: flex-end;
       align-items: flex-end;
       border-radius: 0 $border-radius $border-radius 0;
-      margin-bottom:0;
+      margin-bottom: 0;
       //align: right;
       @include media-breakpoint-up(xs) {
         flex: 1 0 20%;
       }
+
       @include media-breakpoint-up(md) {
         flex: 0 0 110px;
         order: 4;
@@ -213,6 +226,7 @@ $checkbox-row-width: 32px;
     font-size: 0.875rem;
     letter-spacing: $letter-spacing;
     margin-bottom: 0;
+
     li {
       //display: flex;
       padding-right: 1rem;
@@ -220,19 +234,25 @@ $checkbox-row-width: 32px;
       margin-bottom: $spacer / 4;
       color: var(--shade);
       text-transform: capitalize;
-      > :first-child, .status, .fas {
+
+      > :first-child,
+      .status,
+      .fas {
         margin-right: 0.125rem;
         top: 0.125rem;
         display: inline-block;
         font-size: 0.8125rem;
         width: 0.75rem;
         height: 0.75rem;
+
         @include media-breakpoint-up(md) {
           margin-right: 0.35rem;
         }
       }
+
       .status {
         margin-right: 0.3rem;
+
         @include media-breakpoint-up(md) {
           margin-right: 0.625rem;
         }
@@ -272,7 +292,6 @@ $checkbox-row-width: 32px;
         color: var(--secondary);
       }
     }
-
   }
 
   .dropdown-menu {
@@ -294,6 +313,7 @@ $checkbox-row-width: 32px;
     font-size: 0.9375rem;
   }
 }
+
 .card-enter-active,
 .card-leave-active {
   transition: all 0.25s;
