--- a/templates/_base/layout_blank.html.twig
+++ b/templates/_base/layout_blank.html.twig
@@ -9,6 +9,7 @@
     {% block stylesheets %}
     {{ encore_entry_link_tags('bolt') }}
     {% endblock %}
+    {{ include('_partials/favicon.html.twig') }}
 </head>
 
 <body>
