--- a/templates/_partials/fields/date.html.twig
+++ b/templates/_partials/fields/date.html.twig
@@ -25,7 +25,7 @@
     form='{{ form }}'
     mode='{{ mode }}'
     locale='{{user.locale}}'
-    labels="{{ { 'toggle': 'editor_date.toggle'|trans }|json_encode }}"
+    labels='{{ { 'toggle': 'editor_date.toggle'|trans }|json_encode }}'
   ></editor-date>
   
 {% endblock %}
