Locale switcher (language select) for the frontend.

--- a/public/theme/skeleton/partials/_footer.twig
+++ b/public/theme/skeleton/partials/_footer.twig
@@ -16,6 +16,12 @@
 
     <hr>
 
+    <h4>{{ __('general.phrase.select_language') }}</h4>
+
+    {% include 'helpers/languageselect.html.twig' with {'type': 'select'} %}
+
+    <hr>
+
     <p>
         {{ __('general.phrase.built-with-bolt') }}
     </p>
