--- a/public/theme/skeleton/partials/_footer.twig
+++ b/public/theme/skeleton/partials/_footer.twig
@@ -18,7 +18,7 @@
 
     <h4>{{ __('general.phrase.select_language') }}</h4>
 
-    {% include 'helpers/languageselect.html.twig' with {'type': 'select'} %}
+    {% include 'helpers/_languageselect.html.twig' with {'type': 'select'} %}
 
     <hr>
 
