Fix pager in skeleton

--- a/public/theme/skeleton/partials/_sub_pager.twig
+++ b/public/theme/skeleton/partials/_sub_pager.twig
@@ -5,7 +5,7 @@
        See: https://github.com/whiteoctober/WhiteOctoberPagerfantaBundle #}
 
     <div class="{{ class }}">
-        {{ pagerfanta(records, theme, {
+        {{ pagerfanta(records, 'default', {
             'proximity': surround
         }) }}
     </div>
