--- a/assets/scss/modules/admin/_sidebar.scss
+++ b/assets/scss/modules/admin/_sidebar.scss
@@ -39,7 +39,11 @@
     font-weight: $font-weight-semibold;
     letter-spacing: $letter-spacing;
     color: var(--admin-sidebar-text);
-    font-size: 0.9375rem;
+    font-size: 0.85rem;
+
+    @include media-breakpoint-up(wd) {
+      font-size: 0.9375rem;
+    }
 
     &:hover {
       @include darken(--admin-sidebar, 0.25);
